# JJK-All-Stars-Chess

./: .gitignore  start-dev.ps1
backend/: .gitignore  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/game/engine/: bot.py  constants.py  core.py  effects.py  engine.py  legal.py  lifecycle.py  models.py  setup.py
backend/app/services/: match_service.py
backend/app/storage/: db.py  models.py  repository.py
backend/tests/: test_api.py  test_engine.py
docs/: index.html  styles.css
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/app/: App.test.tsx  App.tsx  styles.css
frontend/src/app/styles/: base.css  faq.css  layout.css  lobby.css  match.css
frontend/src/features/faq/: FaqView.tsx
frontend/src/features/lobby/: LobbyView.tsx
frontend/src/features/match/: MatchView.test.tsx  MatchView.tsx
frontend/src/game/phaser/: PhaserBoard.tsx
frontend/src/lib/: actions.test.ts  actions.ts  api.test.ts  api.ts  presentation.ts  profile.ts  types.ts
frontend/src/lib/presentation/: index.ts  types.ts
frontend/src/lib/presentation/faq/: index.ts
frontend/src/lib/presentation/pieces/: index.ts
frontend/src/lib/presentation/statuses/: index.ts
frontend/src/lib/presentation/techniques/: index.ts
