[project]
name = "jjk-all-stars-chess-backend"
version = "0.1.0"
description = "FastAPI backend for JJK All-Stars Chess"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "pydantic>=2.11.7",
  "aiosqlite>=0.21.0",
  "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0"
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
